css_components/global/cart.css
.cart-wrapper {
    width: 100%;
    height: 100vh;
    position: fixed;
    display: flex;
    justify-content: end;
    z-index: 1500;
    backdrop-filter: blur(10px);
    display: none;
}

.show-cart {
    display: flex;
}

.hide-cart {
    display: none;
}

.cart-container {
    box-shadow: 0 0 20px rgba(0, 0, 0, .15);
    background-color: white;
    width: 30rem;
    padding: .5rem 1rem;
    z-index: 900;
    display: grid;
    grid-template-areas:
        "header"
        "container"
        "button";
    grid-template-rows: 2.5rem 1fr auto;
}

.cart-header {
    grid-area: header;
    width: auto;
    height: 2.5rem;
    display: flex;
    justify-content: space-between;
    border-bottom: 2px solid black;
    white-space: nowrap;
    gap: 4rem;
}

.cart-items-container {
    grid-area: container;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: auto;
    overflow-y: scroll;
}

.cart-item {
    display: grid;
    grid-template-areas:
        "header header header"
        "image description price";
    grid-template-columns: 1fr auto 1fr;
}

.cart-item-header {
    grid-area: header;
    display: flex;
    justify-content: end;
    margin-bottom: .5rem;
}

.remove-item {
    cursor: pointer;
}

.cart-item-image {
    grid: image;
    width: 8rem;
    height: 10rem;
}

.cart-item-image img {
    width: 100%;
    height: 100%;
}

.cart-item-info-and-quantity {
    display: flex;
    flex-direction: column;
    font-size: 1.3rem;
    padding: 0 1rem;
}

.item-color,
.item-size {
    font-size: 1.2rem;
}

.cart-item-quantity {
    display: flex;
    width: fit-content;
    margin-top: .5rem;
}

.item-quantity {
    width: 2rem;
    border: none;
    text-align: center;
    font-weight: bold;
}

.no-spinner::-webkit-inner-spin-button,
.no-spinner::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.cart-item-quantity button {
    width: 1rem;
    font-size: 1rem;
    border: none;
    background-color: white;
    cursor: pointer;
}

.cart-item-price {
    display: flex;
    justify-content: end;
    font-size: 1.3rem;
}

.cart-checkout-wrapper {
    grid-area: button;
    border: 1px solid;
    height: 3.5rem;
}

.cart-checkout {
    background-color: black;
    color: white;
    font-size: 1.5rem;
    width: 100%;
    height: 100%;
    display: none;
    cursor: pointer;
}

.show-checkout {
    display: block;
}

@media (max-width: 767px) {
    .cart-container {
        width: 100%;
    }

    .cart-items-container {
        grid-template-columns: 1fr 10rem 1fr;
    }

    .cart-item-info-and-quantity {
        white-space: normal;
    }
}

